added header, main for semantics

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <section class="hero">
+    <header class="hero">
       <div class="container">
         <div class="header">
           <div class="logo-wrapper">
@@ -54,8 +54,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="features">
+    </header>
+    <main class="features">
       <div class="container">
         <div class="card">
           <div class="card-illustration">
@@ -101,7 +101,7 @@
         <h2 class="card-end-title">Ready to build your community?</h2>
         <button class="secondary-cta">Get started for free</button>
       </div>
-    </section>
+    </main>
     <footer>
       <div class="container">
         <div class="logo-wrapper">
