Fix: add alt texts to imgs

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
       <div class="container">
         <div class="card">
           <div class="card-illustration">
-            <img src="./images/illustration-grow-together.svg" />
+            <img
+              src="./images/illustration-grow-together.svg"
+              alt="grow-together illustration"
+            />
           </div>
           <div class="card-info">
             <h2 class="card-title">Grow Together</h2>
@@ -72,7 +75,10 @@
         </div>
         <div class="card">
           <div class="card-illustration">
-            <img src="./images/illustration-flowing-conversation.svg" />
+            <img
+              src="./images/illustration-flowing-conversation.svg"
+              alt="flowing-conversation illustration"
+            />
           </div>
           <div class="card-info">
             <h2 class="card-title">Flowing Conversations</h2>
@@ -85,7 +91,10 @@
         </div>
         <div class="card">
           <div class="card-illustration">
-            <img src="./images/illustration-your-users.svg" />
+            <img
+              src="./images/illustration-your-users.svg"
+              alt="your-users illustration"
+            />
           </div>
           <div class="card-info">
             <h2 class="card-title">Your Users</h2>
@@ -111,7 +120,7 @@
           <div class="contact">
             <div class="address">
               <div class="address-icon">
-                <img src="./images/icon-location.svg" />
+                <img src="./images/icon-location.svg" alt="" />
               </div>
               <p class="address-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
@@ -121,13 +130,13 @@
             </div>
             <div class="phone">
               <div class="phone-icon">
-                <img src="./images/icon-phone.svg" />
+                <img src="./images/icon-phone.svg" alt="" />
               </div>
               <p class="phone-text">+1-543-123-4567</p>
             </div>
             <div class="email">
               <div class="email-icon">
-                <img src="./images/icon-email.svg" />
+                <img src="./images/icon-email.svg" alt="" />
               </div>
               <p class="email-text">example@huddle.com</p>
             </div>
